Bug 1352531 - Make dom::FontFace cache its gfxCharacterMap instead of rebuilding it every time. r=dbaron

MozReview-Commit-ID: INmKPdC9dq5